Updated uwlib css to fix a lack of spacing in the navbar and handle string, and to add a : to the handle string label; and added UW Tacoma and UW Press button links to the home page

--- a/src/themes/uwlib/styles/_theme_css_variable_overrides.scss
+++ b/src/themes/uwlib/styles/_theme_css_variable_overrides.scss
@@ -31,53 +31,72 @@ a {
   //--ds-home-news-link-color: #607890;
   --ds-home-news-link-color: #4B2E83;
   --ds-footer-bg: #4B2E83;
- }
+}
 
-.uw-btn   {    
-    border-radius: 0;
-    padding-right: 0;
-    text-align: left;
-    transition: none;
-    display: inline-flex;
-    align-items: stretch;
-    padding: 0;
-    margin: 0.5rem 1rem;
-    font-size: 1rem;
+.uw-btn {
+  border-radius: 0;
+  padding-right: 0;
+  text-align: left;
+  transition: none;
+  display: inline-flex;
+  align-items: stretch;
+  padding: 0;
+  margin: 0.5rem 1rem;
+  font-size: 1rem;
 }
 
 .uw-btn span {
-    color: #4b2e83;
-    background-color: #fff;
-    border: 1px solid #e8e3d3;
-    text-transform: uppercase;
-    font-family: "Encode Sans Compressed", sans-serif;
-    font-weight: 600;
-    text-align: center;
-    padding: 10px 20px;
-    font-size: 1rem;
+  color: #4b2e83;
+  background-color: #fff;
+  border: 1px solid #e8e3d3;
+  text-transform: uppercase;
+  font-family: "Encode Sans Compressed", sans-serif;
+  font-weight: 600;
+  text-align: center;
+  padding: 10px 20px;
+  font-size: 1rem;
 }
 
 .uw-btn span.uw-arrow-box {
-    background-color: #4b2e83;
-    padding: 10px 18px 10px 10px;
-    border: 0 none;
-    display: flex;
-    align-items: center;
+  background-color: #4b2e83;
+  padding: 10px 18px 10px 10px;
+  border: 0 none;
+  display: flex;
+  align-items: center;
 }
 
 .uw-btn span.uw-arrow-box .arrow {
-    border-color: #fff;
-    background-color: #4b2e83;
-    border-width: 0 1px 1px 0;
-    padding: 6px;
-    transform: rotate(-45deg);
+  border-color: #fff;
+  background-color: #4b2e83;
+  border-width: 0 1px 1px 0;
+  padding: 6px;
+  transform: rotate(-45deg);
 }
 
-.uw-btn:hover {text-decoration: none;}
+.uw-btn:hover {
+  text-decoration: none;
+}
 
-.uw-btn:hover span.uw-arrow-box, .uw-btn:hover span.uw-arrow-box .arrow  {
-    background-color: #b7a57a;
-    border-color: white;
-    text-decoration:none;
-    underline:none;
-} 
+.uw-btn:hover span.uw-arrow-box,
+.uw-btn:hover span.uw-arrow-box .arrow {
+  background-color: #b7a57a;
+  border-color: white;
+  text-decoration: none;
+  underline: none;
+}
+
+/* Override the padding for the navbar menu items to add more space */
+
+#main-navbar .ds-menu-item {
+  padding: 0.5rem !important;
+}
+
+/* Adding space before Permalink handle URL */
+ds-base-comcol-page-handle a {
+  padding-left: 0.5em;
+}
+
+/* Adding a colon after the title of the handle in the item page */
+span.mb-0.ng-star-inserted::after {
+  content: ":";
+}
